log
Wed 08 May 2024 12:55:29 AM UTC: 
 tests:  1|8
total_score: 0/70
7e5b78c
Wed 08 May 2024 12:57:04 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
df78593
Wed 08 May 2024 01:00:34 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4912a41
Wed 08 May 2024 01:00:51 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
f35ed74
Wed 08 May 2024 01:06:18 AM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++----------
 1 file changed, 28 insertions(+), 10 deletions(-)
 tests:  5|7
total_score: 5/70
a25717e
Wed 08 May 2024 01:07:14 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 5/70
87f6a03
Wed 08 May 2024 01:08:00 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 15/70
f18e181
Wed 08 May 2024 01:08:45 AM UTC: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:91:19: error: ‘aux’ undeclared (first use in this function)
   91 |     new->parent = aux;
      |                   ^~~
treemap.c:91:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a7cd2fe
Wed 08 May 2024 01:09:09 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
2df8044
Wed 08 May 2024 01:10:20 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
f02fbef
Wed 08 May 2024 01:12:54 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:120:63: error: expected ‘)’ before ‘{’ token
  120 |         if (tree->lower_than(node->pair->key, temp->pair->key) {
      |            ~                                                  ^~
      |                                                               )
treemap.c:126:5: error: expected expression before ‘}’ token
  126 |     }
      |     ^
treemap.c:114:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  114 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4fe136b
